--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Zain-ul-din",
   "license": "ISC",
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.77.8",
+    "@tanstack/router-plugin": "^1.77.7",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
@@ -24,6 +26,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.77.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
