--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-router": "^1.77.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
