--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@tanstack/react-router": "^1.77.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "zustand": "^5.0.1"
   }
 }
